<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        />
    <item
        android:id="@+id/feed"
        android:enabled="true"
        android:title="@string/recipes"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_coffee_24"
        />
    <item
        android:id="@+id/suggest"
        android:enabled="true"
        android:title="@string/suggest"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_contact_support_24"
        />

</menu>