<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.recipeapp.viewmodels.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/primary_orange"
        tools:context=".Activities.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/recipe_background"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/etLogin"
            android:hint="@string/login"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@={viewModel.username}"
            />

        <EditText
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etLogin"
            android:id="@+id/etPass"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@={viewModel.password}"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/etPass"
            android:text="@string/sign_up"
            android:background="@drawable/button_background"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_on_secondary"
            android:onClick="@{() -> viewModel.signUp()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>